k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goat-gideon
  namespace: goat-gideon
  labels:
    app: goat-gideon
spec:
  type: ClusterIP
  selector:
    app: goat-gideon
  ports:
    - port: 80
      targetPort: 8080
